Adding Jquery FAQ exercise.

--- a/Konami.html
+++ b/Konami.html
@@ -20,26 +20,75 @@
     <div class="col-xs-4 hidden">
         <h1>Time to get schwifty!</h1>
         <img src="img/SaYmoW6.gif" class="img-responsive">
+        <audio id="audio1" src="sounds/RaM205.GetSchwifty.FullSong.mp3"></audio>
     </div>
     <div class="col-xs-4 hidden"><img src="img/SaYmoW6.gif" class="img-responsive"></div>
 </div>
 
 <script   src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
+
 <script>
     "use strict";
 
     var kkeys = [], konami = "38,38,40,40,37,39,37,39,66,65,13";
-
+    var code = 0;
     $(document).keydown(function(e) {
 
         kkeys.push( e.keyCode );
 
         if ( kkeys.toString().indexOf( konami ) >= 0 ) {
-            // do something awesome
-            $("body").addClass("konami");
-            $("div").removeClass("hidden");
+            if (code == 0) {
+                // do something awesome
+                $("body").addClass("konami");
+                $("div").removeClass("hidden");
+                var audio = document.getElementById("audio1");
+                audio.play();
+                code = 1;
+                kkeys = []
+            }else {
+                $("body").removeClass("konami");
+                $("div").addClass("hidden");
+                var audio = document.getElementById("audio2");
+                audio.play();
+                code = 0;
+                kkeys = []
+            }
         }
     });
 </script>
+<!--How Luis did it , partial.
+<script>
+    "use strict";
+
+    keys {
+    up: 38
+    down: 40
+    left: 37
+    right: 39
+    b: 66
+    a: 65
+    enter: 13
+    }
+
+    konami = [ keys.up,
+    keys.up,
+    keys.down,
+    keys.down,
+    keys.left,
+    keys.right,
+    keys.left,
+    keys.right,
+    key.b,
+    key.a,
+    key.enter )
+
+    var counter = 0
+    $(document).ready(function() {
+        $('#textfield').keyup(function() {
+            alert('.keyup() event fired');
+        });
+    });
+</script>
+-->
 </body>
 </html>
