debug animation and draft of weather map.

--- a/CodingChallenge.html
+++ b/CodingChallenge.html
@@ -5,6 +5,6 @@
     <title>CodingChallenge</title>
 </head>
 <body>
-<script src="codingChallenge.js"></script>
+<script src="js/codingChallenge.js"></script>
 </body>
 </html>
