--- a/weather_map.html
+++ b/weather_map.html
@@ -3,11 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Map</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <style>
+        .konami {
+            background-color: yellow;
+            background-image: url("img/ynfsLL7.jpg");
+            background-size: 100%;
+            color: #FFF!important;
+
+        }
+        .konami-footer {
+            color: #000;
+            background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+        }
+        
+        .panel-transparent {
+            background: none;
+        }
+
+        .panel-transparent .panel-heading{
+            background: rgba(122, 130, 136, 0.3)!important;
+            border: 1px black;
+        }
+
+        .panel-transparent .panel-body{
+            background: rgba(46, 51, 56, 0.3)!important;
+        }
+        p {font-size: 1.5vw;}
+
+    </style>
+    <script>!window.jQuery && document.write('<script src="Raptorize-Kit/jquery-1.4.1.min.js"><\/script>')</script>
 </head>
-<body>
-<main>
-    <h1>San Antonio Weather</h1>
-    <div id="results"></div>
+<body id="top">
+<main class="container">
+    <div class="panel panel-default panel-transparent">
+        <div id="header">
+            <h1>San Antonio Weather</h1>
+        </div>
+
+        <!--Main Content-->
+        <div class="panel-body" id="dailyforecast">
+        </div>
+
+
+        <div class="panel-footer" id="headline">
+        </div>
+    </div>
+    <p><a href="#" class="button">Click me</a> to activate.</p>
 </main>
 
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -21,20 +63,53 @@
             url: "http://dataservice.accuweather.com/forecasts/v1/daily/5day/351198.json?apikey=4zEGGRGSEecaQZl4K1To6RhV1B9Hm9Wt",
             cache: false
                 }).always(function (response) {
-            console.log(response)
+//            console.log(response)
         }).fail(function (error) {
-            console.log(error);
+//            console.log(error);
         }).done(function (response) {
-            console.log(typeof(response));
-            $(response).each(function (i, element){
-                console.log(element);
-                console.log(i);
-//                $("#results").html("";)
-                $("#results").append("<tr><td>" + element.DailyForecasts[i].Date +
-                        "</td><td>" + element.DailyForecasts[i].Day.IconPhrase + "</td></tr>")
+            console.log(response);
+            $("#dailyforecast").html("");
+            response.DailyForecasts.forEach(function (element, i){
+                var icon = element.Day.Icon;
+                var dayOfWeek = new Date(element.Date);
+                var days = ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'];
+                var weekday = dayOfWeek.getDay();
+                var maxTemp = element.Temperature.Maximum.Value + "°" + element.Temperature.Maximum.Unit;
+                var minTemp = element.Temperature.Minimum.Value + "°" + element.Temperature.Minimum.Unit
+                $("#dailyforecast").append("<div class='panel-body col-xs-2'>" +
+                        "<div>" + "<p class='text-center'><small>" + days[weekday] + "</small></p>" + "</div>" +
+                        "<img src='iconsWthr/" + icon + ".png'>" +
+                        "<div>" + "<p class='text-center'><small>" + element.Day.IconPhrase + "</small></p>" + "</div>" +
+                        "<div>" + "High - " + maxTemp + "</div>" +
+                        "<div>" + "Low - " + minTemp + "</div>" +
+                        "</div>"
+                );
+            });
+            $("#headline").html("");
+            $(response).each(function (i, element) {
+                $("#headline").append("<div id='footer'>" + element.Headline.Text + "</div>")
             })
         })
+    })
+</script>
+<script src="jquery.batWeatherize.1.0.js"></script>
+<script>
+    "use strict";
 
+    var kkeys = [], konami = "38,38,40,40,37,39,37,39,66,65,13";
+    var code = 0;
+    $(document).keydown(function(e) {
+
+        kkeys.push( e.keyCode );
+
+        if ( kkeys.toString().indexOf( konami ) >= 0 ) {
+            if (code == 0) {
+                $("#top").addClass("konami");
+                $("#header").addClass("text-center");
+                $("#headline").addClass("konami-footer");
+                $('.button').raptorize()
+            }
+        }
     })
 </script>
 </body>
