--- a/weather_map.html
+++ b/weather_map.html
@@ -5,6 +5,10 @@
     <title>Weather Map</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
+        #map-canvas {
+            width: 300px;
+            height: 300px;
+        }
         .konami {
             background-color: yellow;
             background-image: url("img/ynfsLL7.jpg");
@@ -49,10 +53,70 @@
         <div class="panel-footer" id="headline">
         </div>
     </div>
-    <p><a href="#" class="button">Click me</a> to activate.</p>
+    <div id="map-canvas"></div>
+    <div class="form-group">
+        <label for="coordinates" class="col-sm-2 control-label"></label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="coordinates" placeholder="Latitude and Longitude">
+            <p><a href="#" class="button"> Get Coordinates</a></p>
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Get Coordinates</button>
+            </div>
+        </div>
+    </div>
+
 </main>
 
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMd0fAqI9mzTm-gIa32ImVrCR2zSDVBak"></script>
+<script type="text/javascript">
+    (function() {
+        "use strict";
+
+        // Set our map options
+        var mapOptions = {
+            // Set the zoom level
+            zoom: 13
+        };
+
+        // Render the map
+        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+
+        var address = "Embassy Oaks Shopping Center, 606 Embassy Oaks #100, San Antonio, TX 78216";
+
+        // Init geocoder object
+        var geocoder = new google.maps.Geocoder();
+
+        var mPh = { lat: 29.5636896, lng: -98.4897047};
+
+        // Add the marker to our existing map
+        var marker = new google.maps.Marker({
+            position: mPh,
+            map: map
+        });
+
+        var infowindow = new google.maps.InfoWindow({
+            content: "<a href=''>Magnolia Pancake Haus</a>",
+            disableAutoPan: false
+        });
+
+        // Open the window using our map and marker
+        infowindow.open(map, marker);
+
+        // Geocode our address
+        geocoder.geocode({"address": address}, function (results, status) {
+
+            // Check for a successful result
+            if (status == google.maps.GeocoderStatus.OK) {
+                // Recenter the map over the address
+                map.setCenter(results[0].geometry.location);
+            } else {
+                // Show an error message with the status if our request fails
+                alert("Geocoding was not successful - STATUS: " + status);
+            }
+        });
+    })();
+</script>
 <script type="text/javascript">
 
     jQuery(document).ready(function ($) {
@@ -112,5 +176,6 @@
         }
     })
 </script>
+
 </body>
 </html>
